--- a/wp-content/themes/gwtd3/style.css
+++ b/wp-content/themes/gwtd3/style.css
@@ -4,7 +4,7 @@ Theme URI: http://underscores.me/
 Author: TBD...
 Author URI: https://multiple_wordpress_awesome.contributors
 Description: The most awesome theme for gwtd3!
-Version: 1.0.0
+Version: 1.0.1
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: gwtd3
@@ -49,7 +49,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.io/normalize.css/
 html {
 	font-family: sans-serif;
 	-webkit-text-size-adjust: 100%;
-	-ms-text-size-adjust:     100%;
+	-ms-text-size-adjust: 100%;
 }
 
 body {
@@ -616,6 +616,7 @@ a:active {
 	.menu-toggle {
 		display: none;
 	}
+
 	.main-navigation ul {
 		display: block;
 	}
@@ -935,30 +936,13 @@ h1, h2, h3, h4, h5 {
 	padding: 6rem 0 6rem;
 }
 
-/* Hero
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.hero {
-	background: #471530;
-	color: #d5afbb;
-	padding: 7rem 0 19rem;
-}
-
-.hero h1 {
-	font-size: 20rem;
-}
-
-.hero-heading {
-	word-wrap: break-word;
-}
-
 /* LP sections
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-.lp-what-it-is {
+.section.lp-what-it-is {
 	background: #d5afbb;
 	color: #471530;
-	background-image: url(img/questionmark.png) left top no-repeat ;
+	background-image: url(img/questionmark.png);
 	background-image: url(img/questionmark.svg), linear-gradient(transparent, transparent);
 	background-repeat: no-repeat;
 	background-attachment: local;
@@ -967,10 +951,10 @@ h1, h2, h3, h4, h5 {
 	background-origin: content-box;
 }
 
-.lp-where-it-is {
+.section.lp-where-it-is {
 	background: #5a90aa;
 	color: #b4eeef;
-	background-image: url(img/globe.png) left top no-repeat ;
+	background-image: url(img/globe.png);
 	background-image: url(img/globe.svg), linear-gradient(transparent, transparent);
 	background-repeat: no-repeat;
 	background-attachment: local;
@@ -979,10 +963,10 @@ h1, h2, h3, h4, h5 {
 	background-origin: content-box;
 }
 
-.lp-how-to-get-involved {
+.section.lp-how-to-get-involved {
 	background: #17506b;
 	color: #d4aebb;
-	background-image: url(img/rocket.png) left top no-repeat ;
+	background-image: url(img/rocket.png);
 	background-image: url(img/rocket.svg), linear-gradient(transparent, transparent);
 	background-repeat: no-repeat;
 	background-attachment: local;
@@ -991,10 +975,18 @@ h1, h2, h3, h4, h5 {
 	background-origin: content-box;
 }
 
-.lp-what-it-is h1,
-.lp-where-it-is h1,
-.lp-how-to-get-involved h1 {
+.section.lp-what-it-is h1,
+.section.lp-where-it-is h1,
+.section.lp-how-to-get-involved h1 {
 	font-size: 8.0rem;
+}
+
+/* Header
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.section.hero {
+	background: #471530;
+	color: #d5afbb;
 }
 
 /* Footer
@@ -1003,42 +995,88 @@ h1, h2, h3, h4, h5 {
 .footer {
 	background: #2e2e2e;
 	color: #c2c1c1;
-	padding: 5rem 0 2rem;
+	padding: 0;
 }
 
-.footer h1 {
+.footer h2 {
 	font-size: 8.0rem;
+	margin: 4rem 0;
+}
+
+#footer-social {
+	margin: 5.5rem 0;
+}
+
+#footer-social a {
+	margin-right: 1.0rem;
+}
+
+#footer-social a:last-child {
+	margin-right: 0;
+}
+
+#footer-social a img {
+	width: 62px;
+}
+
+/* Menus
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.section.primary-menus {
+	padding: 1rem 0;
+	background: #5a90aa;
+}
+
+.section.primary-menus ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	font-size: 2.5rem;
+}
+
+.section.primary-menus ul li {
+	display: inline-block;
+	margin:0 1.0rem 0 0;
+}
+
+.section.primary-menus ul li a{
+	display: inline-block;
+	margin-right: 1.0rem;
+}
+.section.primary-menus ul li:last-child {
+	margin-right: 0;
 }
 
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-/* Smaller than 750 */
-@media (max-width: 750px) {
-	.hero h1 {
-		font-size: 14rem;
-	}
-
-	.lp-what-it-is h1,
-	.lp-where-it-is h1,
-	.lp-how-to-get-involved h1 {
+@media (max-width: 992px) {
+	.section.lp-what-it-is h1,
+	.section.lp-where-it-is h1,
+	.section.lp-how-to-get-involved h1 {
 		font-size: 6.0rem;
 	}
 
-	.footer h1 {
-		font-size: 3.0rem;
+	.footer h2 {
+		font-size: 5.0rem;
+		text-align: center;
+	}
+
+	#footer-social {
+		text-align: center;
+		margin: 5.0rem 0;
+	}
+
+	#footer-social a img {
+		width: 40px;
 	}
 }
 
-/* Smaller than 550 */
-@media (max-width: 550px) {
-	.hero h1 {
-		font-size: 8rem;
-	}
-
-	.lp-what-it-is h1,
-	.lp-where-it-is h1,
-	.lp-how-to-get-involved h1 {
+/* Small devices (landscape phones, up to 550px)*/
+@media (max-width: 768px) {
+	.section.lp-what-it-is h1,
+	.section.lp-where-it-is h1,
+	.section.lp-how-to-get-involved h1 {
 		font-size: 3.0rem;
 	}
 }
