--- a/wp-content/themes/gwtd3/style.css
+++ b/wp-content/themes/gwtd3/style.css
@@ -4,7 +4,7 @@ Theme URI: http://underscores.me/
 Author: TBD...
 Author URI: https://multiple_wordpress_awesome.contributors
 Description: The most awesome theme for gwtd3!
-Version: 1.0.1
+Version: 1.0.3
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: gwtd3
@@ -39,7 +39,7 @@ hr,p{margin-bottom:1.5em}table,textarea{width:100%}#content[tabindex="-1"]:focus
 --------------------------------------------------------------*/
 
 body {
-	font-size: 1.8rem;
+	font-size: 2.5rem;
 	font-family: 'Changa', sans-serif;
 	font-weight: 400;
 }
@@ -211,6 +211,15 @@ h1, h2, h3, h4, h5 {
 	text-align: right;
 }
 
+#to-top {
+	display: none;
+	position: fixed;
+	bottom: 0.5rem;
+	right: 0.5rem;
+	z-index: 100;
+	width: 2.5em;
+}
+
 /* Sections
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .section {
@@ -219,6 +228,22 @@ h1, h2, h3, h4, h5 {
 
 /* LP sections
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.questionmark,
+.globe,
+.rocket {
+	display: none;
+	width: 100%;
+	text-align:center;
+	clear: both;
+	margin-bottom: 4rem;
+}
+
+.questionmark img,
+.globe img,
+.rocket img {
+	width: 150px;
+}
 
 .section.lp-what-it-is {
 	background: #D5AFBB;
@@ -307,6 +332,58 @@ h1, h2, h3, h4, h5 {
 /* Menus
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+#site-wrapper {
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+}
+
+#site-canvas {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	-webkit-transform: translateX(0);
+	transform: translateX(0);
+	-webkit-transition: .3s ease all;
+	transition: .3s ease all;
+}
+
+#site-menu {
+	width: 300px;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: -300px;
+	background: #5A90AA;
+	padding: 15px;
+}
+
+#site-wrapper.show-nav #site-canvas {
+	-webkit-transform: translateX(300px);
+	transform: translateX(300px);
+}
+
+#site-menu ul {
+	list-style: none;
+}
+
+#mobile-menu-trigger {
+	display: none;
+	position: fixed;
+	top: 0.5rem;
+	left: 0.5rem;
+	z-index: 100;
+}
+
+#mobile-menu-trigger:hover {
+	cursor: pointer;
+}
+
+#mobile-menu-trigger span {
+	color: #FFFFFF;
+	font-size: 4rem;
+}
+
 .section.primary-menus {
 	padding: 1rem 0;
 	background: #5A90AA;
@@ -358,9 +435,9 @@ h1, h2, h3, h4, h5 {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 @media (max-width: 992px) {
-	.section.lp-what-it-is h1,
-	.section.lp-where-it-is h1,
-	.section.lp-how-to-get-involved h1 {
+	.section.lp-what-it-is h2,
+	.section.lp-where-it-is h2,
+	.section.lp-how-to-get-involved h2 {
 		font-size: 6.0rem;
 	}
 
@@ -376,6 +453,7 @@ h1, h2, h3, h4, h5 {
 
 	#footer-social a img {
 		width: 40px;
+		border: 0;
 	}
 }
 
@@ -384,6 +462,25 @@ h1, h2, h3, h4, h5 {
 	.section.lp-what-it-is h2,
 	.section.lp-where-it-is h2,
 	.section.lp-how-to-get-involved h2 {
-		font-size: 3.0rem;
+		font-size: 3.5rem;
+	}
+
+	.questionmark,
+	.globe,
+	.rocket {
+		display: block;
+	}
+
+	.section.lp-what-it-is,
+	.section.lp-where-it-is,
+	.section.lp-how-to-get-involved {
+		background-image: none;
+	}
+	.section.primary-menus .columns {
+		display: none;
+	}
+
+	#mobile-menu-trigger {
+		display: block;
 	}
 }
