--- a/wp-content/themes/gwtd3/style.css
+++ b/wp-content/themes/gwtd3/style.css
@@ -574,6 +574,7 @@ strong {
 	}
 	.section.lp-when-it-is h2 {
 		font-size: 8rem;
+		margin-bottom: 20px;
 	}
 	#countdown div {
 		font-size: 80px;
