--- a/wp-content/themes/gwtd3/style.css
+++ b/wp-content/themes/gwtd3/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: gwtd3
-Theme URI: http://underscores.me/
+Theme URI: https://wptranslationday.org
 Author: TBD...
-Author URI: https://multiple_wordpress_awesome.contributors
-Description: The most awesome theme for gwtd3!
-Version: 1.0.8
+Author URI: https://wptranslationday.org
+Description: The most awesome theme for WP Translation Day!
+Version: 1.0.9
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: gwtd3
