--- a/wp-content/themes/gwtd3/style.css
+++ b/wp-content/themes/gwtd3/style.css
@@ -218,6 +218,14 @@ strong {
 	width: 2.5em;
 }
 
+.pull-right {
+	float: right;
+}
+
+.pull-left {
+	float: right;
+}
+
 /* Sections
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .section {
@@ -460,8 +468,52 @@ strong {
 #gwtd-menu-mobile a:hover,
 #primary-menu a:hover,
 #primary-menu-mobile a:hover {
-	color: #fff !important;
+	color: #eddae2 !important;
 }
+
+/* sub menu */
+
+.section.sub-menus {
+	padding: 1rem 0;
+	background: #eddae2;
+	position: absolute;
+	width: 100%;
+	z-index: 100;
+	display: none;
+}
+
+.section.sub-menus ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	font-size: 2.5rem;
+}
+
+.section.sub-menus ul li {
+	display: inline-block;
+	margin: 0 1.0rem 0 0;
+}
+
+.section.sub-menus ul li a {
+	display: inline-block;
+	margin-right: 1.0rem;
+	color: #258196;
+	font-weight: 600;
+}
+
+.section.sub-menus ul li a:hover {
+	color: #80456b;
+}
+
+.section.sub-menus .thegray a {
+	color: #666;
+}
+
+.section.sub-menus ul li:last-child {
+	margin-right: 0;
+}
+
+
 
 /* Caldera Forms
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
