--- a/wp-content/themes/gwtd3/style.css
+++ b/wp-content/themes/gwtd3/style.css
@@ -232,6 +232,10 @@ strong {
 	padding: 6rem 0 6rem;
 }
 
+.hero.header {
+	padding: 2rem 0 2rem;
+}
+
 /* LP sections
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
